--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         Ek Promise Majhyakadun, Jevde Sukh Tula Deta Yeil Tevde Deil, Kahi hi Jhale Tari Mi Shevatparyant Saath Maatra Tulach Deil… <br>
         Mala Tuza sobutach rahaich aahe lagna pn tuza sobutach karaich ahe. <br>
         Tula mi promise karto ki maza mude tuza dodyat pani nhi yenar mi asa kadhich nhi wagnar. <br>
+        Mi nehmi tuza sobutach rahnar kontya pn situation madhe. <br>
+        Mazi Hot pilu ahe n tu ❤️
         <span class="main">I LOVE YOU PILLU ❤️</span>
 
     </p>
