--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         Mala Tuza sobutach rahaich aahe lagna pn tuza sobutach karaich ahe. <br>
         Tula mi promise karto ki maza mude tuza dodyat pani nhi yenar mi asa kadhich nhi wagnar. <br>
         Mi nehmi tuza sobutach rahnar kontya pn situation madhe. <br>
-        Mazi Hot pilu ahe n tu ❤️
+        Mazi Hot pilu ahe n tu ❤️ <br>
         <span class="main">I LOVE YOU PILLU ❤️</span>
 
     </p>
